[GTK] Scrollbars not following gtk-primary-button-warps-slider setting https://bugs.webkit.org/show_bug.cgi?id=191067

Patch by Jim Mason <jmason@ibinx.com> on 2018-10-30
Reviewed by Michael Catanzaro.

* platform/gtk/ScrollbarThemeGtk.cpp:
(WebCore::ScrollbarThemeGtk::handleMousePressEvent):

Canonical link: https://commits.webkit.org/205902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237617 268f45cc-cd09-0410-ab3c-d52691b4dbfc